# selfchat

./: .gitignore  CITATIONS.bib  LICENSE  README.md  analyze.py  browse.py  cluster.py  embed.py  embed_messages.py  fetch_advbench.py  fetch_alpaca.py  fetch_jbb.py  logodds.py  markers.py  plot.py  plot_msgs.py  priors.md  probe.py  pyproject.toml  pyrightconfig.json  run_analysis.sh  run_experiment.py  run_msg_analysis.sh  separability.py  shared.py
scripts/: plot_separability.sh  run_analysis.sh  run_msg_analysis.sh  run_separability.sh
selfchat/analysis/: analyze.py  logodds.py  markers.py  view.py
selfchat/classify/: _common.py  suite.py  tier0_length.py  tier1_chars.py  tier1_tfidf.py  tier2_tfidf.py  tier3_embeddings.py
selfchat/core/: seeds.py  self_chat.py
selfchat/embeddings/: embed.py  embed_messages.py
selfchat/runs/: run_experiment.py
selfchat/safety/: vet.py
selfchat/stats/: _kmeans.py  _kmeans_torch.py  cluster.py  jb_purity_balanced.py  jb_purity_sweep.py  lexical_purity_sweep.py  probe.py  purity_profile.py  separability.py
selfchat/viz/: browse.py  plot_msgs.py  plot_purity_profile.py  plot_safety_hist.py  plot_safety_per_seed.py  plot_separability.py  plot_tier0_features.py  plot_tsne.py
selfchat/viz/pages/: 1_cluster_lab.py
tests/: smoke.py
