[project]
name = "selfchat"
version = "0.1.0"
description = "Gemma-4 attractor state comparison: base vs jailbroken self-chat (Phase 1 MVP)"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",
    "pydantic>=2.7",
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "streamlit>=1.40",
    "plotly>=5.24",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["*.py", "tests"]
extraPaths = ["."]
pythonVersion = "3.12"
