[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfchat"
version = "0.1.0"
description = "Gemma-4 attractor state comparison: base vs jailbroken self-chat (Phase 1 MVP)"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",
    "pydantic>=2.7",
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "streamlit>=1.40",
    "plotly>=5.24",
    "scikit-learn>=1.8.0",
    "hdbscan>=0.8.42",
    "huggingface-hub>=1.0",
]

[project.optional-dependencies]
# GPU-accelerated KMeans. Activate with SELFCHAT_KMEANS=cuml — routes
# dense substrates (neural embeddings) through cuml and sparse substrates
# (lexical TF-IDF) through torch sparse spherical-kmeans.
# Install requires both the NVIDIA RAPIDS index and the PyTorch CUDA index:
#   uv pip install -e ".[gpu]" \
#     --extra-index-url https://pypi.nvidia.com \
#     --extra-index-url https://download.pytorch.org/whl/cu128
gpu = [
    "cuml-cu12>=24.10",
    "torch>=2.5",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["selfchat*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["*.py", "tests"]
extraPaths = ["."]
pythonVersion = "3.12"
